@startuml
'https://plantuml.com/class-diagram



class NameSorterSort{
    + {static} List<String> sortList(List<String> names)
}

class NameSorterBase{
     List<String> Names
   + {static} void main()
    - {static} List<String> convertFile()
}

class NameSorterExport{
    + {static} void exportList(List<String> Names)
}

NameSorterBase <|-- NameSorterSort
NameSorterBase <|-- NameSorterExport

@enduml